# peer_ws

./: Dockerfile  Readme.MD  package.xml  requirements.txt  requirements_docker.txt  setup.cfg  setup.py
annotate_scripts/ground_segment/: masks.py
datasets/Pallet_detect/Pallet Detection.v2i.coco/: README.roboflow.txt
datasets/Pallet_detect/Pallet Detection.v2i.coco/test/: _annotations.coco.json
datasets/Pallet_detect/Pallet Detection.v2i.coco/train/: _annotations.coco.json
datasets/Pallet_detect/Pallet Detection.v2i.coco/valid/: _annotations.coco.json
datasets/Pallet_detect/Pallet_yolo/: data.yaml
datasets/Pallet_detect/Pallet_yolo/test/: labels.cache
datasets/Pallet_detect/Pallet_yolo_wo_aug/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/Pallet_detect/Pallet_yolo_wo_aug/train/: labels.cache
ground_segment/: masks.py  segment.py
launch/: inference.launch.py
peer/: ros_inference_node.py
runs/segmentation/: events.out.tfevents.1746686464.dell.46103.0  events.out.tfevents.1746686801.dell.53628.0  events.out.tfevents.1746687218.dell.65946.0  events.out.tfevents.1746687327.dell.68362.0
rviz/: rviz.rviz
scripts/: test_obj_model.py  test_segment_model.py  train_obj_model.py  train_segment_model.py
scripts/runs/detect/pallet_detector_yolov8n2-n/: args.yaml  results.csv
scripts/runs/detect/val/: predictions.json
src/peer/: setup.py
src/peer/annotate_scripts/ground_segment/: segment.py
src/peer/datasets/loco_in_yolo/: data.yaml
src/peer/launch/: inference.launch.py
src/peer/peer/: ros_inference_node.py  trt_inference_node.py
(+3926 files in other folders)
