<?xml version="1.0"?>
<package format="3">
  <name>peer</name>
  <version>0.0.1</version>
  <description>ROS 2 node for pallet detection and ground segmentation using YOLOv8 and UNet.</description>

  <maintainer email="abhinav7@terpmail.umd.edu">Abhinav Bhamidipati</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
